@@ -1,7 +1,19 @@
-plugins { id("org.jetbrains.kotlin.jvm") }
-java { sourceCompatibility = JavaVersion.VERSION_17; targetCompatibility = JavaVersion.VERSION_17 }
-kotlin { compilerOptions { jvmTarget.set(org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_17); freeCompilerArgs.add("-Xjdk-release=17") } }
-dependencies { testImplementation("junit:junit:4.13.2") }
-tasks.test { useJUnit(); jvmArgs("--add-modules", "jdk.httpserver") }
+plugins {
+    id("org.jetbrains.kotlin.jvm")
+}
 
-tasks.withType<org.gradle.api.tasks.compile.JavaCompile>().configureEach { options.release.set(17) }
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
+
+kotlin {
+    compilerOptions {
+        jvmTarget.set(org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_17)
+        freeCompilerArgs.add("-Xjdk-release=17")
+    }
+}
+
+tasks.withType<org.gradle.api.tasks.compile.JavaCompile>().configureEach {
+    options.release.set(17)
+}
